src/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
         rewrite /pgadmin http://pgadmin.localhost;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix #ou Exec
          path: "/pgadmin"
          backend:
            service:
              name: pgadmin
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress-local
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.localhost
      http:
        paths:
        - pathType: Prefix #ou Exec
          path: /
          backend:
            service:
              name: pgadmin
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.127.0.0.1.nip.io
      http:
        paths:
        - pathType: Prefix #ou Exec
          path: /
          backend:
            service:
              name: pgadmin
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: web
      port:
        number: 8080
